Bug 1594132 - Move background-color rules so they do not appear under appearance rules, enabling sidebar vibrancy. r=ntim,dao
`appearance` CSS rules allow elements to take on system appearance. For UI elements that we want to take on system styling, we set `appearance: auto` combined with platform-specific rules like `-moz-default-appearance: -moz-mac-vibrant-titlebar-light;`

macOS sidebar vibrancy broke because a background-color was being applied to `root`. That colour appeared under elements with `appearance: auto` set, so we wouldn't see the platform-specific styling. This patch moves the root background-color to `#navigator-toolbox`, so that it does not appear under `#sidebar-box`.

We still want a background colour applied to sidebars when a lwtheme includes one. We only want `appearance: auto` applied to sidebars when the active theme does not have sidebar styling rules. That's why `#sidebar-box:not(:-moz-lwtheme)` is changed to `#sidebar-box:not([lwt-sidebar])`.

This patch also removes the rule
```
:root:-moz-lwtheme {
  appearance: none;
}
```
from osx/global/global.css. There's no corresponding addition of a `#navigator-toolbox { appearance:none; }` rule because that rule already exists in [osx/browser.css](https://searchfox.org/mozilla-central/rev/7067bbd8194f4346ec59d77c33cd88f06763e090/browser/themes/osx/browser.css#45).

Differential Revision: https://phabricator.services.mozilla.com/D104416

UltraBlame original commit: e5ee2e40acc0271d1e6032ab7e6058469cd7eef9

--- a/toolkit/themes/osx/global/global.css
+++ b/toolkit/themes/osx/global/global.css
@@ -71,6 +71,21 @@ css
 :
 root
 {
+/
+*
+:
+:
+:
+:
+:
+Variables
+:
+:
+:
+:
+:
+*
+/
 -
 -
 arrowpanel
@@ -254,6 +269,21 @@ mac
 -
 focusring
 ;
+/
+*
+:
+:
+:
+:
+:
+Styles
+:
+:
+:
+:
+:
+*
+/
 appearance
 :
 auto
@@ -288,6 +318,22 @@ message
 box
 ;
 }
+/
+*
+:
+:
+:
+:
+:
+Alert
+icons
+:
+:
+:
+:
+:
+*
+/
 .
 message
 -
@@ -462,6 +508,21 @@ png
 )
 ;
 }
+/
+*
+:
+:
+:
+:
+:
+iframe
+:
+:
+:
+:
+:
+*
+/
 xul
 |
 iframe
@@ -516,6 +577,26 @@ flex
 "
 )
 {
+/
+*
+In
+emulation
+<
+iframe
+>
+is
+block
+instead
+of
+inline
+so
+reset
+the
+width
+/
+height
+*
+/
 xul
 |
 iframe
@@ -530,19 +611,22 @@ auto
 ;
 }
 }
+/
+*
 :
-root
 :
--
-moz
--
-lwtheme
-{
-appearance
 :
-none
-;
-}
+:
+:
+Miscellaneous
+formatting
+:
+:
+:
+:
+:
+*
+/
 :
 root
 [
